# idp-blueprint

./: .coderabbit.yaml  .gitignore  .helm-docs-template.gotmpl  .markdownlint-cli2.yaml  .markdownlintignore  .mcp.json  .prettierignore  .prettierrc.yaml  .trufflehog-ignore  .yamllint  AGENTS.md  ARCHITECTURE_VISUAL.md  AUDIT_REPORT_MKDOCS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  D2.md  DOCS_RECONSTRUCTION_PLAN.md  DOCUMENTATION_ANALYSIS_REPORT.md  LICENSE  README.md  SECURITY.md  TROUBLESHOOTING_GA_FAILURES.md  Taskfile.yaml  audit_report.md  catalog-info.yaml  config.toml  devbox.json  docker-bake.hcl  k3s_resilience_strategy.md  knowledge_graph_export.json  list-docs.md  load-test-gateway.js  memory_export.json  merge-conflict.md  mkdocs.yml  package-lock.json  proposal.md  pyproject.toml  requirements.txt  scheduling-strategy.md
.codex/: config.toml
.devcontainer/: Dockerfile  devbox-minimal.json  devbox-ops.json  devbox.json  devcontainer.json  handle-env-vars.sh  init.sh
.gemini/: settings.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  pull_request_template.md
.memory/: README.md  graph.db  graph.db.backup-20251120-032014  graph.db.before-observations-fts-fix  workloads.dot
.qwen/: settings.json
.serena/: project.yml
Archive/: analysis-iteration-1-complete.md  analysis-iteration-12-inner-loop.md  analysis-iteration-3-concepts.md  analysis-iteration-4-transversality.md  analysis-iteration-5-abstraction.md  analysis-iteration-7-finops.md
Catalog/: report.md
Docs/: C4-L2-Containers-final.d2  C4-L2-IDP.d2  C4-L2.d2  (+17 more)
(+989 files in other folders)
