[project]
name = "idp-blueprint-docs"
version = "0.1.0"
description = "Documentation tooling for the IDP Blueprint MkDocs site"
requires-python = ">=3.12"
dependencies = [
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.7.0",
  "mkdocs-material-extensions>=1.3.1",
  "mkdocs-d2-plugin>=1.6.0",
  "pymdown-extensions>=10.8",
]

[tool.uv]
